--- a/src/Archmage/GameBundle/Resources/views/footer.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/footer.html.twig
@@ -1,6 +1,7 @@
-<footer class="footer">
+{#
+<footer class="footer navbar navbar-default navbar-inverse">
     <div class="container">
-        <p>Place sticky footer content here.</p>
+        <small class="navbar-text"><i class="fa fa-fw fa-lg fa-copyright"></i> Copyright</small>
     </div>
 </footer>
-    
+#}
