--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
 {# comprime la salida html #}
 {# % spaceless % #}
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Archmage - {% block title %}{% endblock %}</title>
-    {# block css #}
-    {% block stylesheets %}
-        {# con los css no funciona el @Bundle shortcut #}
-        {% stylesheets output='css/base.min.css' filter='cssrewrite'
-        'bower/normalize-css/normalize.css'
-        'bower/fontawesome/css/font-awesome.css'
-        '@ArchmageGameBundle/Resources/public/css/theme.css'
-        '@ArchmageGameBundle/Resources/public/css/style.css'
-        %}
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
-        <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css'>
-        {% endstylesheets %}
-    {% endblock %}
-    {# favicon #}
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-</head>
-{# body #}
-<body>
-<img src="{{ asset('bundles/archmagegame/images/background/theme.jpg') }}" class="background">
-{# block topbar menu #}
-{% block navbar %}{% endblock %}
-{# block flashbag messages #}
-{% block flashbag %}
-    <div class="container">
-        {% for type, flashMessages in app.session.flashbag.all() %}
-            {% for flashMessage in flashMessages %}
-                <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center fade in" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
-                    <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> {{ flashMessage }}
-                </div>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Archmage - {% block title %}{% endblock %}</title>
+        {# block css #}
+        {% block stylesheets %}
+            {# con los css no funciona el @Bundle shortcut #}
+            {% stylesheets output='css/base.min.css' filter='cssrewrite'
+            'bower/normalize-css/normalize.css'
+            'bower/fontawesome/css/font-awesome.css'
+            '@ArchmageGameBundle/Resources/public/css/theme.css'
+            '@ArchmageGameBundle/Resources/public/css/style.css'
+            %}
+            <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
+            <link href='http://fonts.googleapis.com/css?family=MedievalSharp' rel='stylesheet' type='text/css'>
+            {% endstylesheets %}
+        {% endblock %}
+        {# favicon #}
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    </head>
+    {# body #}
+    <body>
+    <img src="{{ asset('bundles/archmagegame/images/background/theme.jpg') }}" class="background">
+    {# block topbar menu #}
+    {% block navbar %}{% endblock %}
+    {# block flashbag messages #}
+    {% block flashbag %}
+        <div class="container">
+            {% for type, flashMessages in app.session.flashbag.all() %}
+                {% for flashMessage in flashMessages %}
+                    <div class="col-xs-12 alert alert-{{ type }} alert-dismissable text-center fade in" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
+                        <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> {{ flashMessage|raw }}
+                    </div>
+                {% endfor %}
             {% endfor %}
-        {% endfor %}
-    </div>
-{% endblock %}
-{# block body #}
-{% block body %}{% endblock %}
-{# block footer #}
-{% block footer %}{% endblock %}
-{# block js #}
-{% block javascripts %}
-    {% javascripts output='js/base.min.js'
-        'bower/jquery/jquery.js'
-        'bower/bootstrap/dist/js/bootstrap.js'
-    %}
-    <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-{% endblock %}
-{# signature #}
-<!--
-Developed by
-_______                         __ __
-|  ___|                         | (_)
-| |_ ___ _ __ __ _  __ _ _ __ __| |_
-|  _/ _ \ '__/ _` |/ _` | '__/ _` | |
-| ||  __/ | | (_| | (_| | | | (_| | |
-\_| \___|_|  \__, |\__,_|_|  \__,_|_|
-              __/ |
-             |___/
--->
-</body>
+        </div>
+    {% endblock %}
+    {# block body #}
+    {% block body %}{% endblock %}
+    {# block footer #}
+    {% block footer %}{% endblock %}
+    {# block js #}
+    {% block javascripts %}
+        {% javascripts output='js/base.min.js'
+            'bower/jquery/jquery.js'
+            'bower/bootstrap/dist/js/bootstrap.js'
+            'bower/bootstrap-validator/js/validator.js'
+        %}
+        <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+    {% endblock %}
+    {# signature #}
+    <!--
+    Developed by
+    _______                         __ __
+    |  ___|                         | (_)
+    | |_ ___ _ __ __ _  __ _ _ __ __| |_
+    |  _/ _ \ '__/ _` |/ _` | '__/ _` | |
+    | ||  __/ | | (_| | (_| | | | (_| | |
+    \_| \___|_|  \__, |\__,_|_|  \__,_|_|
+                  __/ |
+                 |___/
+    -->
+    </body>
 </html>
 {# % endspaceless % #}
