--- a/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
@@ -7,8 +7,19 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Mensajes <i class="fa fa-fw fa-lg fa-envelope"></i> <small>Bandeja de entrada</small></h1>
+                    <h1><i class="fa fa-fw fa-lg fa-envelope"></i>Buzón</h1>
                 </div>
+                {% for i in 1..7 %}
+                    {% if loop.index is odd %}
+                        <div class="col-xs-7 alert alert-success text-right" role="alert">
+                            Texto de <a href="#" class="alert-link">prueba</a> <i class="fa fa-fw fa-lg fa-caret-square-o-right"></i>
+                        </div>
+                    {% else %}
+                        <div class="col-xs-offset-5 col-xs-7 alert alert-danger" role="alert">
+                            <i class="fa fa-fw fa-lg fa-caret-square-o-left"></i> Texto de <a href="#" class="alert-link">prueba</a>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
     </div>
