--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Reclutar{% endblock %}
+{% block title %}Ranking{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-3 col-md-6 col-xs-12">
+            <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-user-plus"></i>Reclutar</h1>
+                    <h1><i class="fa fa-fw fa-lg fa-line-chart"></i>Ranking</h1>
                 </div>
             </div>
         </div>
