--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-joomla"></i> <small>Usar artefactos</small></h1>
+                    <h1><i class="fa fa-fw fa-lg fa-joomla"></i>Usar artefactos</h1>
                 </div>
             </div>
         </div>
