--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -5,13 +5,26 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-tint"></i> <small>Cargar maná</small></h1>
+                    <h1><i class="fa fa-fw fa-lg fa-tint"></i>Cargar maná</h1>
                 </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
-                        <span class="sr-only">60% Complete</span>
+                <div class="panel panel-primary">
+                    <div class="panel-heading text-center">Recarga maná para lanzar hechizos costosos</div>
+                    <div class="panel-body text-center">
+                        <form data-toggle="validator">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <div class="input-group-addon"><img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.jpg') }}"/></div>
+                                    <input type="number" class="form-control" id="turns" min="1" max="300" value="0" required/>
+                                    <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
+                        </form>
+                    </div>
+                    <div class="panel-footer">
+                        Aquí puedes recargar maná para ser capaz de pagar los mantenimientos de tus unidades, así como para poder lanzar los hechizos más poderosos del reino.
                     </div>
                 </div>
             </div>
