--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -5,14 +5,9 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-magic"></i> <small>Conjurar hechizos</small></h1>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;">
-                        <span class="sr-only">60% Complete</span>
-                    </div>
+                    <h1><i class="fa fa-fw fa-lg fa-magic"></i>Conjurar</h1>
                 </div>
             </div>
         </div>
