--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -5,19 +5,10 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-graduation-cap"></i> <small>Investigar hechizos</small></h1>
+                    <h1><i class="fa fa-fw fa-lg fa-graduation-cap"></i>Investigar</h1>
                 </div>
-                {% set levels = ['danger','warning','success'] %}
-                {% for i in 1..random(10) %}
-                    {% set percent = random(100) %}
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-{{ levels[percent / 34] }}" role="progressbar" aria-valuenow="{{ percent }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{ percent }}%;">
-                            {{ percent }}%
-                        </div>
-                    </div>
-                {% endfor %}
             </div>
         </div>
     </div>
